[project]
name = "stresstest-api"
version = "0.1.0"
description = ""
authors = [
    {name = "LilianBoulardAcolad",email = "lilian.boulard@acolad.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.14,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
